--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --inline --config webpack.dev.config.js"
+    "start": "webpack-dev-server --hot --inline --config webpack.dev.config.js",
+    "stats": "webpack --env production --profile --json > stats.json"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/yyxie/npmWebpackTest#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.5",
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
