--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "antd": "^2.13.3",
     "babel-preset-stage-0": "^6.24.1",
+    "bundle-loader": "^0.5.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
