--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot --inline --config webpack.dev.config.js",
+    "build": "webpack --colors --display-error-details --config webpack.build.config.js",
+    "pub": "node ./scripts/deploy.js",
     "stats": "webpack --env production --profile --json > stats.json"
   },
   "repository": {
@@ -32,11 +34,14 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.2.1",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
+    "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^2.0.8",
+    "sftp-upload": "^1.0.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.7.1"
@@ -45,13 +50,19 @@
     "antd": "^2.13.3",
     "babel-preset-stage-0": "^6.24.1",
     "bundle-loader": "^0.5.5",
+    "emoji": "^0.3.2",
     "extract-text-webpack-plugin": "^3.0.0",
+    "hommilyeditor": "^3.2.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-emoji": "^0.5.0",
+    "react-emojione": "^5.0.0",
     "react-fa": "^5.0.0",
+    "react-md-editor": "^0.2.2",
+    "react-quill": "^1.1.0",
     "react-redux": "^5.0.6",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
